﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum

opsi-script (4.12.6.0) unreleased; urgency=low

* [fix] oscrypt: function md5fromFile, loop through array caused an index out of bounds error (j.werner)
  
-- j.werner <j.werner@uib.de> 23 Mai 2022

opsi-script (4.12.5.3) unreleased; urgency=low

  * [chg] osparser: execution of powershellcall with powershell.exe -ExecutionPolicy ByPass (j.werner)
    
-- j.werner <j.werner@uib.de> 09 June 2022

opsi-script (4.12.5.2) unreleased; urgency=low

  * [fix] oswebservice: using former openssl pascal units for MacOS due to the new ones are not working on MacOS. (j.werner)
  * [fix] oszip: handle division by zero if files to zip are empty (#4748, !66, a.schmitz)
  * [fix] osparser: execution of powershellcall as statement( tsPowershellcall)
              call of parsePowershellCall with remaining (instead of r) (d.oertel)
    
-- j.werner <j.werner@uib.de> 09 June 2022


opsi-script (4.12.5.1) unreleased; urgency=low

  * [new] osparser: doIniFilePatches: support %userprofiledir% inside of patches section (!51, d.oertel)
  * [new] osparser : CHMOD for Linux.
          Adding new function TuibFileInstall.calcMode to handle 'ugo=+-rwx' mode format.
          Adding 'ugo=+-rwx' mode format to CHMOD.
          Adding '-rwxrwxrwx' mode format to CHMOD.
          Adding '/AllSubFiles' parameter to Files_section CHMOD command. (#4559, !48, j.laajili)
  * [new] osparser: New functions for TOML files handling.
          function LoadTOMLFile(TOMLfilePath: String): TStringList,
          function GetTOMLAsStringList(TOMLcontents: String): TStringList,
          function GetTOMLKeys(TOMLcontents: String): TStringList,
          function GetTOMLTableNames(TOMLcontents: String): TStringList,
          function GetTOMLTable(TOMLcontents: String; table : String): TStringList,