@@ -3,6 +3,10 @@ todo:
 isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
 mac getIpByName liefert name von IPnum
 
+testsyntax:
+
+* [fix] osparser: retrieveSection: use SearchForSectionLines
+
 opsi-script (4.12.6.0) unreleased; urgency=low
 
 * [fix] oscrypt: function md5fromFile, loop through array caused an index out of bounds error (j.werner)
